cabal-version:   3.0
name:            pldi2024
version:         0.1.0.0
license:         NONE
author:          Daniel Pinto
maintainer:      Daniel.Andres.Pinto@gmail.com
build-type:      Simple

common warnings
    ghc-options: -Wall

library
  build-depends:    containers, base, mtl, exceptions
  hs-source-dirs:   src
  exposed-modules:
      Zilly
    , Basic
    , ZTest

    
  other-modules:
      Paths_pldi2024

  default-language: GHC2021

executable example
    import:           warnings
    main-is:          Main.hs
    hs-source-dirs:   app
    build-depends:    pldi2024, containers, base
    ghc-options:
      -Wall -Wunused-packages
    default-language: GHC2021
